--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URI = 'mongodb+srv://manojsenapaty98:manoj123@cluster0.cudnas3.mongodb.net'
+CLERK_WEBHOOK_SECRET = 'whsec_X0+QKkmS3qyWNNPdUJFsBGUdKi0CJSXO'
