--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_Zml0LWxvdXNlLTg2LmNsZXJrLmFjY291bnRzLmRldiQ
 VITE_BACKEND_URL = 'http://localhost:4000'
+VITE_RAZORPAY_KEY_ID = 'rzp_test_won5ybduaLXVlS'
